--- a/style.css
+++ b/style.css
@@ -1,5 +1,28 @@
-div{
-    display: flex;
+body {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100vw;
+  height: 100vh;
+
+  gap: 2rem;
+}
+
+.title{
+  display: flex;
+  justify-content: center;
+  text-decoration-line: underline;
+}
+
+.button{
+  display: flex;
+  gap: 10px;
 }
 .btn{
     color: white;
@@ -7,35 +30,17 @@ div{
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     font-weight: bold;
-    border:none;
+    border:1px solid transparent;
+    cursor: pointer;
     transition:0.3s; /*서서히 바뀌게 끔*/
-    margin-left: 10px;
 }
 .btn:hover{
     background-color: white;
-    cursor: pointer;
+    
     color:black;
 }
-.title{
-    justify-content: center;
-    text-decoration-line: underline;
-}
-.button{
-    justify-content: center;
-}
 
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    width: 100vw;
-    height: 100vh;
-  
-    gap: 2rem;
-  }
-  
 .clothes-container {
     display: grid;
     justify-items: center;
